update README and add Bandage plot

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,11 @@ process {
         memory = "${params.memory}.GB"
         container = 'staphb/flye:latest'
     }
+    withLabel: 'bandage' {
+        cpus = 2                        // Bandage is less CPU-intensive
+        memory = "4.GB"                 // Bandage needs minimal memory
+        container = 'staphb/bandage:latest'
+    }
 }
 
 docker {
