--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,9 @@
 params {
     genome_size = "5m"                  // Default genome size (5 Mb, Flye format: '5m')
     cpu = 8                             // CPU threads
-    memory = 12                         // Memory in GB
+    memory = 12                        // Memory in GB 
+    medaka_auto_model = true            // Enable Medaka auto model selection
+    medaka_model = "r1041_e82_400bps_sup_v5.0.0"  // Default Medaka model
 }
 
 process {
@@ -10,10 +12,25 @@ process {
         memory = "${params.memory}.GB"
         container = 'staphb/flye:latest'
     }
+    withLabel: 'medaka' {
+        cpus = params.cpu
+        memory = "${params.memory}.GB"
+        container = 'staphb/medaka:latest'
+    }
     withLabel: 'bandage' {
-        cpus = 2                        // Bandage is less CPU-intensive
-        memory = "4.GB"                 // Bandage needs minimal memory
+        cpus = 2
+        memory = "4.GB"
         container = 'staphb/bandage:latest'
+    }
+    withLabel: 'quast' {
+        cpus = 2
+        memory = "4.GB"
+        container = 'staphb/quast:latest'
+    }
+    withLabel: 'bakta' {
+        cpus = params.cpu
+        memory = "${params.memory}.GB"  // Bakta can be memory-intensive with large DBs
+        container = 'staphb/bakta:latest'
     }
 }
 
