--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,11 @@ process {
         memory = "4.GB"
         container = 'staphb/bandage:latest'
     }
+    withLabel: 'dnaapler' {
+        cpus = params.cpu
+        memory = "${params.memory}.GB" 
+        container = 'staphb/dnaapler:1.0.1'
+    }
     withLabel: 'quast' {
         cpus = 2
         memory = "4.GB"
