--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,7 @@ jobs:
           docker pull staphb/medaka:latest
           docker pull staphb/dnaapler:1.0.1
           docker pull staphb/bandage:latest
-          docker pull quay.io/biocontainers/quast:5.2.0--py39pl5322h2e03b76_2
-          docker pull quay.io/biocontainers/biopython:1.81--py39h43f5750_0
+          docker pull staphb/quast:latest
 
       - name: Run Pipeline with Test Data
         run: |
