--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,18 +23,17 @@ jobs:
 
       - name: Pull Docker Images
         run: |
-          docker pull staphb/flye:latest
-          docker pull staphb/medaka:latest
-          docker pull staphb/bandage:latest
+          docker pull staphb/flye:2.9.5
+          docker pull staphb/medaka:2.0.1
+          docker pull staphb/bandage:0.8.1
           docker pull staphb/dnaapler:1.0.1
           docker pull staphb/quast:5.2.0
-          docker pull staphb/bakta:latest
+          docker pull staphb/bakta:1.10.4-5.1-light
 
       - name: Run Pipeline with Test Data
         run: |
           nextflow run main.nf \
             --reads "test_data/test_reads.fastq.gz" \
-            --bakta_db "/fake/path" \
             --nproc 2 \
             --memory "4.GB" \
-            -resume || { echo "Pipeline failed at Bakta due to missing DB; partial validation OK"; exit 0; }
+            -resume
