--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,5 @@ jobs:
           nextflow run main.nf \
             --reads "test_data/test_reads.fastq.gz" \
             --nproc 2 \
-            --memory "4.GB" \
+            --memory 4.GB \
             -resume
