--- a/nextflow.config
+++ b/nextflow.config
@@ -1,41 +1,43 @@
 params {
     genome_size = "5m"                  // Default genome size (5 Mb, Flye format: '5m')
     cpu = 8                             // CPU threads
-    memory = 12                        // Memory in GB 
+    memory = 16                         // Memory in GB (aligned with main.nf)
     medaka_auto_model = true            // Enable Medaka auto model selection
     medaka_model = "r1041_e82_400bps_sup_v5.0.0"  // Default Medaka model
+    bakta_db = ""                       // Empty uses light DB; override with full DB path
+    dnaapler_mode = "all"               // Default DNAApler mode
 }
 
 process {
     withLabel: 'assembly' {
         cpus = params.cpu
         memory = "${params.memory}.GB"
-        container = 'staphb/flye:latest'
+        container = 'staphb/flye:2.9.5'
     }
     withLabel: 'medaka' {
         cpus = params.cpu
         memory = "${params.memory}.GB"
-        container = 'staphb/medaka:latest'
+        container = 'staphb/medaka:2.0.1'
     }
     withLabel: 'bandage' {
         cpus = 2
         memory = "4.GB"
-        container = 'staphb/bandage:latest'
+        container = 'staphb/bandage:0.8.1'
     }
     withLabel: 'dnaapler' {
         cpus = params.cpu
-        memory = "${params.memory}.GB" 
+        memory = "${params.memory}.GB"
         container = 'staphb/dnaapler:1.0.1'
     }
     withLabel: 'quast' {
         cpus = 2
         memory = "4.GB"
-        container = 'staphb/quast:latest'
+        container = 'staphb/quast:5.2.0'
     }
     withLabel: 'bakta' {
         cpus = params.cpu
-        memory = "${params.memory}.GB"  // Bakta can be memory-intensive with large DBs
-        container = 'staphb/bakta:latest'
+        memory = "${params.memory}.GB"
+        container = 'staphb/bakta:1.10.4-5.1-light'  // Light DB included
     }
 }
 
