Fix memory error (4.GB.GB) by correcting nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 params {
     genome_size = "5m"                  // Default genome size (5 Mb, Flye format: '5m')
     cpu = 8                             // CPU threads
-    memory = 16                         // Memory in GB (aligned with main.nf)
+    memory = "16.GB"                    // Memory as string with unit
     medaka_auto_model = true            // Enable Medaka auto model selection
     medaka_model = "r1041_e82_400bps_sup_v5.0.0"  // Default Medaka model
     bakta_db = ""                       // Empty uses light DB; override with full DB path
@@ -11,32 +11,32 @@ params {
 process {
     withLabel: 'assembly' {
         cpus = params.cpu
-        memory = "${params.memory}.GB"
+        memory = params.memory          // Use directly, no .GB suffix
         container = 'staphb/flye:2.9.5'
     }
     withLabel: 'medaka' {
         cpus = params.cpu
-        memory = "${params.memory}.GB"
+        memory = params.memory
         container = 'staphb/medaka:2.0.1'
     }
     withLabel: 'bandage' {
         cpus = 2
-        memory = "4.GB"
+        memory = "4.GB"                 // Fixed value for CI compatibility
         container = 'staphb/bandage:0.8.1'
     }
     withLabel: 'dnaapler' {
         cpus = params.cpu
-        memory = "${params.memory}.GB"
+        memory = params.memory
         container = 'staphb/dnaapler:1.0.1'
     }
     withLabel: 'quast' {
         cpus = 2
-        memory = "4.GB"
+        memory = "4.GB"                 // Fixed value for CI compatibility
         container = 'staphb/quast:5.2.0'
     }
     withLabel: 'bakta' {
         cpus = params.cpu
-        memory = "${params.memory}.GB"
+        memory = params.memory
         container = 'staphb/bakta:1.10.4-5.1-light'  // Light DB included
     }
 }
