Fix memory error (4.GB.GB) by correcting nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 params {
     genome_size = "5m"                  // Default genome size (5 Mb, Flye format: '5m')
-    cpu = 8                             // CPU threads
+    cpu = 2                             // Default CPU threads
     memory = "16.GB"                    // Memory as string with unit
     medaka_auto_model = true            // Enable Medaka auto model selection
     medaka_model = "r1041_e82_400bps_sup_v5.0.0"  // Default Medaka model
@@ -11,7 +11,7 @@ params {
 process {
     withLabel: 'assembly' {
         cpus = params.cpu
-        memory = params.memory          // Use directly, no .GB suffix
+        memory = params.memory
         container = 'staphb/flye:2.9.5'
     }
     withLabel: 'medaka' {
